--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Unfinished
+<!DOCTYPE html>
+
+<html>
+
+	<head>
+		
+		<title>Home - Hudson Green</title>
+		
+	</head>
+	
+	<body>
+		
+		<h1>Not finished... :(</h1>
+		
+	</body>
+	
+</html>
