--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		
 		<h1>Not finished... :(</h1>
 		
+		<p>If you would like to view my Cydia repository, click <a href="http://repo.hudsongreen.com/">here</a></p>
+		
 	</body>
 	
 </html>
