--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		
 		<h1>Not finished... :(</h1>
 		
-		<p>If you would like to view my Cydia repository, click <a href="http://repo.hudsongreen.com/">here</a></p>
+		<p>If you would like to view my Cydia repository or if you can't stand this default font, click <a href="http://repo.hudsongreen.com/">here</a>.</p>
 		
 	</body>
 	
