--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		
 		<title>Home - Hudson Green</title>
 		
+		<meta name="google-site-verification" content="S0uR9TVcH4rzHEOZSvL6VuG6w4KKcot0kFTppWHuGno" />
+		
 	</head>
 	
 	<body>
