--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
 
 	<head>
 		
+		<script type="application/ld+json">
+			{
+				"@context": "http://schema.org",
+				"@type": "DataSet",
+				"name": "Hudson Green",
+				"alternateName": "Hudson Green",
+				"url": "http://hudsongreen.com/",
+				"creator":{
+					"@context": "http://schema.org",
+					"@type":"Organization",
+					"url": "http://hudsongreen.com",
+					"name": "Hudson Green",
+					"logo": "http://hudsongreen.com/favicon.png"
+				}
+			}
+		</script>
+		
 		<title>Home - Hudson Green</title>
 		
 	</head>
