--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		
 		<script type="application/ld+json">
 			{
-				"@context": "http://schema.org",
+				"@context": "http://schema.org/SiteNavigationElement",
 				"@type": "DataSet",
 				"name": "Hudson Green",
 				"alternateName": "Hudson Green",
