--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 			{
 				"@context": "http://schema.org/SiteNavigationElement",
 				"@type": "DataSet",
-				"name": "Hudson Green",
-				"alternateName": "Hudson Green",
+				"name": "Hudson K. Green",
+				"alternateName": "Hudson K. Green",
 				"url": "http://hudsongreen.com/",
 				"logo": "http://hudsongreen.com/favicon.png"
 			}
