--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 				"@context": "http://schema.org/SiteNavigationElement",
 				"@type": "DataSet",
 				"name": "Hudson K. Green",
-				"alternateName": "Hudson K. Green",
+				"alternateName": "Hudson Green",
 				"url": "http://hudsongreen.com/",
 				"logo": "http://hudsongreen.com/favicon.png"
 			}
