--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 		
 		<script type="application/ld+json">
 			{
-				"@context": "http://schema.org/SiteNavigationElement",
-				"@type": "DataSet",
-				"name": "Hudson K. Green",
+				"@context": "http://schema.org",
+				"@type": "WebSite",
+				"name": "Hudson Green",
 				"alternateName": "Hudson Green",
-				"url": "http://hudsongreen.com/",
-				"logo": "http://hudsongreen.com/favicon.png"
+				"url": "http://hudsongreen.com"
 			}
 		</script>
 		
