--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			}
 		</script>
 		
+		<meta name="apple-mobile-web-app-title" content="Hudson Green">
+		
 		<title>Home - Hudson Green</title>
 		
 	</head>
