--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 		
 		<h1>Not finished... :(</h1>
 		
-		<h1>IMPORTANT: The FCC Wants to Get RID of Net Neutrality.</h1>
-		<p>Net Neutrality PROTECTS us From Internet CENSORSHIP and Makes Sure ISPs Like Comcast Treat all Websites EQUALLY! Don't Let Them Take That Away From Us! Removing Net Neutrality Will KILL Small Businesses! Learn More <a href="https://www.battleforthenet.com">Here</a>!</p>
+		<article>
+			<h1>IMPORTANT: The FCC Wants to Get RID of Net Neutrality.</h1>
+			<p>Net Neutrality PROTECTS us from Internet CENSORSHIP and makes sure ISPs like Comcast treat all websites EQUALLY! Don't let them take that away from us! Removing Net Neutrality will KILL small businesses! Learn More <a href="https://www.battleforthenet.com">Here</a>!</p>
+		</article>
 		
 		<p>If you would like to view my Cydia repository or if you can't stand this default font, click <a href="http://repo.hudsongreen.com/">here</a>.</p>
 		
