--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
 		
 		<title>Home - Hudson Green</title>
 		
+		<link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
+		
 	</head>
 	
 	<body>
 		
-		<h1>Not finished... :(</h1>
+		<nav>
+			
+			
+			
+		</nav>
+		
+		<h1>Website Not finished... :(</h1>
 		
 		<main>
 			<article>
