--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		</script>
 		
 		<meta name="apple-mobile-web-app-title" content="Hudson Green">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<title>Home - Hudson Green</title>
 		
