--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 			
 			<article>
 				<h1>IMPORTANT: The FCC Wants to Get RID of Net Neutrality.</h1>
-				<p>Net Neutrality PROTECTS us from Internet CENSORSHIP and makes sure ISPs like Comcast treat all websites EQUALLY! Don't let them take that away from us! Removing Net Neutrality will KILL small businesses! Learn More <a href="https://www.battleforthenet.com">Here</a>!</p>
+				<p>Net Neutrality PROTECTS us from Internet CENSORSHIP and makes sure ISPs like Comcast treat all websites EQUALLY! Don't let them take that away from us! Removing Net Neutrality will KILL small businesses!</p>
+				<p>Learn More <a href="https://www.battleforthenet.com">Here</a>!</p>
 			</article>
 		</main>
 		
