--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			}
 		</script>
 		
+		<script src="https://widget.battleforthenet.com/widget.js" async></script>
+		
 		<meta name="apple-mobile-web-app-title" content="Hudson Green">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
