--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<p>If you would like to view my Cydia repository or if you can't stand this default font, click <a href="http://repo.hudsongreen.com/">here</a>.</p>
 		</footer>
 		
-		<script src="https://widget.battleforthenet.com/widget.js" async></script>
+		<!--<script src="https://widget.battleforthenet.com/widget.js" async></script>-->
 		
 	</body>
 	
