--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			
 			<article>
 				<h1>IMPORTANT: The FCC Wants to Get RID of Net Neutrality.</h1>
-				<h4>Hudson Green &bullet; ADMIN</h4>
+				<h4><span class="author-name">Hudson Green</span> &bullet; <span class="author-rank rank-admin">Admin</span></h4>
 				<br />
 				<p>Net Neutrality PROTECTS us from Internet CENSORSHIP and makes sure ISPs like Comcast treat all websites EQUALLY! Don't let them take that away from us! Removing Net Neutrality will KILL small businesses!</p>
 				<br />
