--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		</footer>
 		
 		<!--<script src="https://widget.battleforthenet.com/widget.js" async></script>-->
-		<script src="https://use.fontawesome.com/e3dbfb0d15.js"></script>
+		<script async src="https://use.fontawesome.com/e3dbfb0d15.js"></script>
 		
 	</body>
 	
