--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 					<span class="author-name">
 						Hudson Green
 						<span class="fa-stack">
-							<i class="fa fa-check fa-stack-2x fa-inverse"></i>
-							<i class="fa fa-certificate fa-stack-1x"></i>
+							<i class="fa fa-1x fa-check fa-stack-2x fa-inverse"></i>
+							<i class="fa fa-1x fa-certificate fa-stack-1x"></i>
 						</span>
 					</span> &bullet; 
 					<span class="author-rank rank-admin">
