--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<h4>
 					<span class="author-name">
 						Hudson Green
-						<span class="fa-stack">
+						<span class="fa-stack badge-verified">
 							<i class="fa fa-lg fa-certificate fa-stack-1x"></i>
 							<i class="fa fa-check fa-stack-1x fa-inverse"></i>
 						</span>
