--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<i class="fa fa-lg fa-certificate fa-stack-1x"></i>
 							<i class="fa fa-check fa-stack-1x fa-inverse"></i>
 						</span>
-					</span>&bullet; 
+					</span>&bullet; &nsbp;
 					<span class="author-rank rank-admin">
 						Admin
 					</span>
