--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 							<i class="fa fa-lg fa-certificate fa-stack-1x"></i>
 							<i class="fa fa-check fa-stack-1x fa-inverse"></i>
 						</span>
-					</span>&bullet; &nbsp;
+					</span>
+					<span class="author-seperator">&bullet;</span> &nbsp;
 					<span class="author-rank rank-admin">
 						Admin
 					</span>
