--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<h1>Website Not finished... :(</h1>
 			
 			<article>
-				<h1>IMPORTANT: The FCC Wants to Get RID of Net Neutrality.</h1>
+				<h1><span class="article-tag-important">Important</span> The FCC Wants to Get RID of Net Neutrality.</h1>
 				<h4>
 					<span class="author-name">
 						Hudson Green
