--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<h1>Website Not finished... :(</h1>
 			
 			<article>
-				<h1><span class="article-tag-important">Important</span> The FCC Wants to Get RID of Net Neutrality.</h1>
+				<h1><span class="article-tag-important">Important</span> The FCC Wants to Get RID of Net Neutrality</h1>
 				<h4>
 					<span class="author-name">
 						Hudson Green
@@ -54,10 +54,31 @@
 				</h4>
 				<br />
 				<p>Net Neutrality PROTECTS us from Internet CENSORSHIP and makes sure ISPs like Comcast treat all websites EQUALLY! Don't let them take that away from us! Removing Net Neutrality will KILL small businesses!</p>
-				<br />
 				<p>Learn More <a href="https://www.battleforthenet.com">Here</a>!</p>
 				<br />
 			</article>
+			
+			<article>
+				<h1><span class="article-tag-important">News</span> Finished the McQueen Racing, LLC Website</h1>
+				<h4>
+					<span class="author-name">
+						Hudson Green
+						<span class="fa-stack badge-verified">
+							<i class="fa fa-lg fa-certificate fa-stack-1x"></i>
+							<i class="fa fa-check fa-stack-1x fa-inverse"></i>
+						</span>
+					</span>
+					<span class="author-seperator">&bullet;</span> &nbsp;
+					<span class="author-rank rank-admin">
+						Admin
+					</span>
+				</h4>
+				<br />
+				<p>After countless hours working on </p>
+				<p>Visit them <a href="https://www.battleforthenet.com">Here</a>!</p>
+				<br />
+			</article>
+			
 		</main>
 		
 		<footer>
