--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 					</span>
 				</h4>
 				<br />
-				<p>After countless hours working on </p>
-				<p>Visit them <a href="https://www.battleforthenet.com">Here</a>!</p>
+				<p>After countless hours working on McQueen Racing's site, it is finally done! This was a very fun site to make and I feel like it turned out really well.</p>
+				<p>Visit them <a href="http://mcqueen-racing.com">Here</a>!</p>
 				<br />
 			</article>
 			
