--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</article>
 			
 			<article>
-				<h1><span class="article-tag-important">News</span> Finished the McQueen Racing, LLC Website</h1>
+				<h1><span class="article-tag-news">News</span> Finished the McQueen Racing, LLC Website</h1>
 				<h4>
 					<span class="author-name">
 						Hudson Green
