--- a/user.html
+++ b/user.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+
+<html>
+
+	<head>
+		
+		<script type="application/ld+json">
+			{
+				"@context": "http://schema.org",
+				"@type": "WebSite",
+				"name": "Hudson Green",
+				"alternateName": "Hudson Green",
+				"url": "http://hudsongreen.com"
+			}
+		</script>
+		
+		<meta name="apple-mobile-web-app-title" content="Hudson Green">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		<title>users.undefined.name - Hudson Green</title>
+		
+		<link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
 		
 	</head>
 	
