--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<h1><span class="article-tag-news">News</span> Finished the McQueen Racing, LLC Website</h1>
 				<h4>
 					<span class="author-name">
-						Hudson Green
+						<a class="author-profile-name" href="/user?=HG">Hudson Green</a>
 						<span class="fa-stack badge-verified">
 							<i class="fa fa-lg fa-certificate fa-stack-1x"></i>
 							<i class="fa fa-check fa-stack-1x fa-inverse"></i>
