--- a/user.html
+++ b/user.html
@@ -43,6 +43,7 @@
 		
 		<!--<script src="https://widget.battleforthenet.com/widget.js" async></script>-->
 		<script async src="https://use.fontawesome.com/e3dbfb0d15.js"></script>
+		<script src="/js/profile.js"></script>
 		
 	</body>
 	
