--- a/user.html
+++ b/user.html
@@ -42,7 +42,8 @@
 		</footer>
 		
 		<!--<script src="https://widget.battleforthenet.com/widget.js" async></script>-->
-		<script async src="https://use.fontawesome.com/e3dbfb0d15.js"></script>
+		<script src="https://use.fontawesome.com/e3dbfb0d15.js" async></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="/js/profile.js"></script>
 		
 	</body>
