--- a/user.html
+++ b/user.html
@@ -34,7 +34,8 @@
 		</nav>
 		
 		<main>
-			<p>Profiles Not Implemented Yet</p>
+			<p>Profiles Still Under Development</p>
+			<h2 class="profile-name">users.undefined.name</h2>
 		</main>
 		
 		<footer>
