--- a/user.html
+++ b/user.html
@@ -35,7 +35,9 @@
 		
 		<main>
 			<p>Profiles Still Under Development</p>
-			<h2 class="profile-name">users.undefined.name</h2>
+			<h2 class="profile-header">
+				<span class="profile-name">users.undefined.name</span>
+			</h2>
 		</main>
 		
 		<footer>
