--- a/user.html
+++ b/user.html
@@ -34,10 +34,15 @@
 		</nav>
 		
 		<main>
-			<p>Profiles Still Under Development</p>
+			
 			<h2 class="profile-header">
 				<span class="profile-name">users.undefined.name</span>
 			</h2>
+			
+			<div class="profile-body">
+				<p>Profiles are still under development</p>
+			</div>
+			
 		</main>
 		
 		<footer>
