--- a/user.html
+++ b/user.html
@@ -35,9 +35,12 @@
 		
 		<main>
 			
-			<h4 class="profile-header">
-				<span class="profile-name">users.undefined.name</span>
-			</h4>
+			<div class="profile-header">
+				<img class="profile-avatar" src="/profile/default/default.png">
+				<h4 class="profile-name-wrapper">
+					<span class="profile-name">users.undefined.name</span>
+				</h4>
+			</div>
 			
 			<div class="profile-body">
 				<p>Profiles are still under development</p>
