--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 			{
 				"@context": "http://schema.org",
 				"@type": "WebSite",
-				"name": "Hudson Green",
-				"alternateName": "Hudson Green",
-				"url": "http://hudsongreen.com"
+				"name": "Hudson Green Blog",
+				"alternateName": "Hudson K. Green Blog",
+				"url": "http://blog.hudsongreen.com"
 			}
 		</script>
 		
 		<meta name="apple-mobile-web-app-title" content="Hudson Green">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<title>Home - Hudson Green</title>
+		<title>Blog - Hudson Green</title>
 		
 		<link rel="stylesheet" type="text/css" href="/css/stylesheet.css">
 		
@@ -55,6 +55,7 @@
 				<br />
 				<p>Net Neutrality PROTECTS us from Internet CENSORSHIP and makes sure ISPs like Comcast treat all websites EQUALLY! Don't let them take that away from us! Removing Net Neutrality will KILL small businesses!</p>
 				<p>Learn More <a href="https://www.battleforthenet.com">Here</a>!</p>
+				<p>UPDATE: While the vote for net neutrality was lost, you can still call congress to convince them to overrule the FCC's vote. But we have a very limited time to do so!</p>
 				<br />
 			</article>
 			
