--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 		<nav>
 			
 			<ul>
-				<li><i class="fa fa-home"></i> Home</li>
+				<li><a href="https://hudsongreen.com/"><i class="fa fa-home"></i> Home</a></li>
+				<li><a href="http://blog.hudsongreen.com/"><i class="fa fa-home"></i> Blog</a></li>
 			</ul>
 			
 		</nav>
