--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
 			<h1>Website Not finished... :(</h1>
 			
 			<article>
+				<h1><span class="article-tag-news">News</span> Merry Christmas!</h1>
+				<h4>
+					<span class="author-name">
+						<a class="author-profile-name" href="/user?=HG">Hudson Green</a>
+						<span class="fa-stack badge-verified">
+							<i class="fa fa-lg fa-certificate fa-stack-1x"></i>
+							<i class="fa fa-check fa-stack-1x fa-inverse"></i>
+						</span>
+					</span>
+					<span class="author-seperator">&bullet;</span> &nbsp;
+					<span class="author-rank rank-admin">
+						Admin
+					</span>
+				</h4>
+				<br />
+				<p>Merry Christmas everyone! Hope you all had an amazing year filled with lots of Christmas cheer.</p>
+				<br />
+			</article>
+			
+			<article>
 				<h1><span class="article-tag-important">Important</span> The FCC Wants to Get RID of Net Neutrality</h1>
 				<h4>
 					<span class="author-name">
